Fri Dec 20 16:00:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: DLDFLAGS is defined in --with-opt-dir handler, so
	  ${DLDFLAGS=} does not work now.  use RUBY_APPEND_OPTIONS instead.
	  [ruby-dev:47855] [Bug #9256]

Fri Dec 20 14:19:12 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (AC_ARG_WITH): use withval directly.
	  fix failure on FreeBSD.
	  http://fb32.rubyci.org/~chkbuild/ruby-trunk/log/20131217T070301Z.diff.html.gz

Fri Dec 20 14:00:01 2013  Aman Gupta <ruby@tmm1.net>

	* include/ruby/ruby.h (struct RClass): add super, remove iv_index_tbl.
	  since RCLASS_SUPER() is commonly used inside while loops, we move it
	  back inside struct RClass to improve cache hits. this provides a
	  small improvement (1%) in hotspots like rb_obj_is_kind_of()
	* internal.h (struct rb_classext_struct): remove super, add
	  iv_index_table
	* internal.h (RCLASS_SUPER): update for new location
	* internal.h (RCLASS_SET_SUPER): ditto
	* internal.h (RCLASS_IV_INDEX_TBL): ditto
	* object.c (rb_class_get_superclass): ditto
	* include/ruby/backward/classext.h (RCLASS_SUPER): ditto

Fri Dec 20 07:07:35 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 03d6ae7.  Changes include:

	  * Fixed typos.

	  * Relaxed Gem.ruby test for ruby packagers that do not use `ruby`.

	* test/rubygems:  ditto.

Thu Dec 19 14:03:04 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_get_freeobj): improve hot path performance.

	* gc.c (heap_get_freeobj_from_next_freepage): replace with
	  heap_get_freepage(). It returns freeobj instead of freepage.
	  This is not on hot path.

Thu Dec 19 12:05:17 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master af60443.  Changes include:

	  * Improved speed of `gem install --ignore-dependencies`.

	  * Open read-write for exclusive flock.  [ruby-trunk - Bug #9257]

	  * Remove specification before install to prevent infinite loop.
